frontend/components/navbar/main/main-navbar.module.scss
.outer {
  padding: 0 24px;
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  height: 64px;
}

.spacer {
  flex-grow: 2;
  -webkit-box-flex: 1;
  width: 100%;
}

.loginContainer {
  display: flex;
  justify-content: flex-end;
  visibility: visible;
  width: 100%;
}

.itemsContainer {
  width: 100%;
  display: block;
  visibility: visible;
}

.logo {
  position: relative;
  bottom: 62px;
  min-width: 150px;
  width: 75%;

  a:hover {
    color: var(--rh__primary-base);    
  }
}

.buttonSpacer {
  width: 30px;
}

// Navbar menu items
.items {
  display: flex;
  flex-direction: row;
  list-style: none;
  margin: 0;
  padding: 0;
}

.navbarItem {
  composes: type11 from '../../../styles/font.module.scss';
  margin-left: 32px;
  margin-top: 0;
  display: inline-block;
  padding: 0;
  white-space: nowrap;
  list-style: none;
}

.nestedItem {
  white-space: nowrap;
  display: inline-block;
  margin-top: 0;
  margin-left: 36px;

  &:first-of-type {
    margin-left: 0;
  }
}

.itemsExpanded {
  -webkit-box-align: center;
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 64px;
  margin: 0px;
  padding: 0px;
  position: absolute;
  left: 205px;
  top: 64px;
  text-align: -webkit-match-parent;
}

.caret {}

.link {
  composes: type11 from '../../../styles/font.module.scss';
}

// unstyled button
.button {
  composes: unstyled from '../../../styles/button.module.scss';
}

.loginButton {
  composes: unstyled-anchor from '../../../styles/button.module.scss';
  composes: type12 from '../../../styles/font.module.scss';
}

.signupButton {
  composes: signup-button from '../../../styles/button.module.scss';
  composes: type12 from '../../../styles/font.module.scss';
}

.loginText {
  white-space: nowrap;
  position: static;
  text-align: center;
}

